--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,10 @@ spring:
     port: 6379
     host: localhost
     database: 0
+  elasticsearch:
+    uris: http://localhost:9200
+    username: root
+    password: 123456
 server:
   port: 7529
   servlet:
