--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <version>2.7.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.yupi</groupId>
+    <groupId>com.paul</groupId>
     <artifactId>juanshua</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>juanshua</name>
