--- a/pom.xml
+++ b/pom.xml
@@ -74,12 +74,25 @@
             <artifactId>druid-spring-boot-starter</artifactId>
             <version>1.2.23</version>
         </dependency>
+        <!-- hotkey -->
         <dependency>
             <artifactId>hotkey-client</artifactId>
             <groupId>com.jd.platform.hotkey</groupId>
             <version>0.0.4-SNAPSHOT</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/hotkey-client-0.0.4-SNAPSHOT.jar</systemPath>
+        </dependency>
+        <!-- Sentinel -->
+        <!-- https://mvnrepository.com/artifact/com.alibaba.cloud/spring-cloud-starter-alibaba-sentinel -->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+            <version>2021.0.5.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-transport-simple-http</artifactId>
+            <version>1.8.8</version>
         </dependency>
 
         <!-- https://doc.xiaominfo.com/knife4j/documentation/get_start.html-->
