--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: springboot-init
+    name: juanshua
   # DataSource Config
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
