--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,6 +1,27 @@
+server:
+  port: 8101
 spring:
+  # 数据库配置
+  # todo 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/shuati
+    url: jdbc:mysql://111.231.11.52:3306
+    username: juanshua_user
+    password: GYh031125
+  # Redis 配置
+  redis:
+    database: 1
+    host: 111.231.11.52
+    port: 6379
+    timeout: 5000
+    password: 123456
+mybatis-plus:
+  configuration:
+    # 生产环境关闭日志
+    log-impl: ''
+# 接口文档配置
+knife4j:
+  basic:
+    enable: true
     username: root
-    password: { password }
+    password: GYh031125
